// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add user to users list in Store 1`] = `
Object {
  "filter": Array [],
  "sort": "",
  "users": Array [
    Object {
      "age": 43,
      "class": "SY",
      "name": "test",
    },
  ],
}
`;

exports[`can add user to users list in Store 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 43,
      "class": "SY",
      "name": "test",
    },
  },
]
`;

exports[`can add user to users list in Store 3`] = `
Object {
  "filter": Array [],
  "sort": "",
  "users": Array [
    Object {
      "age": 43,
      "class": "SY",
      "name": "test",
    },
  ],
}
`;

exports[`can add user to users list in Store 4`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 43,
      "class": "SY",
      "name": "test",
    },
  },
]
`;

exports[`can get users filtered by class 1`] = `
Object {
  "filter": Array [
    "FY",
  ],
  "sort": "",
  "users": Array [
    Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
    Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
    Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  ],
}
`;

exports[`can get users filtered by class 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
  },
  Object {
    "op": "add",
    "path": "/users/1",
    "value": Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
  },
  Object {
    "op": "add",
    "path": "/users/2",
    "value": Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  },
  Object {
    "op": "add",
    "path": "/filter/0",
    "value": "FY",
  },
]
`;

exports[`can get users filtered by class and sorted 1`] = `
Object {
  "filter": Array [
    "FY",
  ],
  "sort": "name",
  "users": Array [
    Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
    Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
    Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  ],
}
`;

exports[`can get users filtered by class and sorted 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
  },
  Object {
    "op": "add",
    "path": "/users/1",
    "value": Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
  },
  Object {
    "op": "add",
    "path": "/users/2",
    "value": Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  },
  Object {
    "op": "replace",
    "path": "/sort",
    "value": "name",
  },
  Object {
    "op": "add",
    "path": "/filter/0",
    "value": "FY",
  },
]
`;

exports[`can get users sorted by age 1`] = `
Object {
  "filter": Array [],
  "sort": "age",
  "users": Array [
    Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
    Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
    Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  ],
}
`;

exports[`can get users sorted by age 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
  },
  Object {
    "op": "add",
    "path": "/users/1",
    "value": Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
  },
  Object {
    "op": "add",
    "path": "/users/2",
    "value": Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  },
  Object {
    "op": "replace",
    "path": "/sort",
    "value": "age",
  },
]
`;

exports[`can get users sorted by name 1`] = `
Object {
  "filter": Array [],
  "sort": "name",
  "users": Array [
    Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
    Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
    Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  ],
}
`;

exports[`can get users sorted by name 2`] = `
Array [
  Object {
    "op": "add",
    "path": "/users/0",
    "value": Object {
      "age": 18,
      "class": "FY",
      "name": "rachel",
    },
  },
  Object {
    "op": "add",
    "path": "/users/1",
    "value": Object {
      "age": 27,
      "class": "FY",
      "name": "joey",
    },
  },
  Object {
    "op": "add",
    "path": "/users/2",
    "value": Object {
      "age": 28,
      "class": "SY",
      "name": "chandler",
    },
  },
  Object {
    "op": "replace",
    "path": "/sort",
    "value": "name",
  },
]
`;
